base: rework QS panel styles implementation
* Add new logic based on QS state layers
* QS panel, brightness bar and notification style customization
* Port to Android 14
* Adapt to Android 14 QPR2

** All styles are ported from https://github.com/Mahmud0808/Iconify

--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -31,4 +31,8 @@
     <java-symbol type="string" name="sleep_mode_notification_content" />
     <java-symbol type="string" name="sleep_mode_enabled_toast" />
     <java-symbol type="string" name="sleep_mode_disabled_toast" />
+
+    <!-- QS panel styles -->
+    <java-symbol type="id" name="qs_state_layer" />
+
 </resources>
