--- a/core/res/res/values/alpha_ids.xml
+++ b/core/res/res/values/alpha_ids.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 **
-** Copyright (C) 2016-2024 crDroid Android Project
-** Copyright (C) 2023-2024, AlphaDroid
+** Copyright 2007, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -18,18 +17,5 @@
 */
 -->
 <resources>
-
-     <!-- the padding on the start of the statusbar -->
-     <dimen name="status_bar_padding_start">8dp</dimen>
-
-     <!-- the padding on the end of the statusbar -->
-     <dimen name="status_bar_padding_end">4dp</dimen>
-
-     <!-- the padding on the top of the statusbar (usually 0) -->
-     <dimen name="status_bar_padding_top">0dp</dimen>
-
-    <!-- QS panel styles -->
-    <dimen name="qs_corner_radius_top">28dip</dimen>
-    <dimen name="qs_corner_radius_left">22dip</dimen>
-    <dimen name="qs_corner_radius_right">24dip</dimen>
+  <item type="id" name="qs_state_layer" />
 </resources>
