--- a/packages/SystemUI/res/layout/qs_footer_impl.xml
+++ b/packages/SystemUI/res/layout/qs_footer_impl.xml
@@ -32,7 +32,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:paddingHorizontal="@dimen/qs_tile_margin_horizontal">
 
             <TextView
                 android:id="@+id/build"
@@ -51,6 +52,13 @@
                 android:textAppearance="@style/TextAppearance.QS.Status.DataUsage"
                 android:textColor="?android:attr/textColorSecondary"
                 android:visibility="gone" />
+
+            <View
+                android:id="@+id/spacer"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
 
             <com.android.systemui.qs.PageIndicator
                 android:id="@+id/footer_page_indicator"
