SystemUI: add percentage view to brightness bar [1/2]
* Based on commit:
https://github.com/Spark-Rom/frameworks_base/commit/72351c40679a6402de3234229ef00ff2be0b8a85

Co-Authored-By: elpaablo <donopwhile1@gmail.com>

--- a/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
+++ b/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
@@ -39,12 +39,25 @@
             android:clickable="true"
         />
 
+        <TextView
+            android:id="@+id/brightness_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/bb_percentage_margin_left"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:text="Text"
+            android:textSize="13.5sp"
+            android:textColor="@color/qs_color_button_brightness"
+            android:background="@drawable/brightness_bg"
+        />
+
         <ImageButton
             android:id="@+id/brightness_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20.0dip"
+            android:layout_marginStart="@dimen/bb_percentage_margin_left"
             android:background="@drawable/brightness_bg"
             android:src="@drawable/ic_qs_brightness_auto_off"
             android:tint="@color/qs_color_button_brightness"
