--- a/core/res/res/values-night/alpha_colors.xml
+++ b/core/res/res/values-night/alpha_colors.xml
@@ -32,8 +32,8 @@
     <color name="qs_color_icon_unavailable">@color/system_neutral2_500</color>
     <color name="qs_color_inactive">@color/system_neutral2_800</color>
     <color name="qs_color_neutral">@color/system_neutral2_600</color>
-    <color name="qs_color_accent_primary">@color/holo_blue_light</color>
-    <color name="qs_color_accent_secondary">@color/holo_green_light</color>
+    <color name="qs_color_accent_primary">@android:color/system_accent1_400</color>
+    <color name="qs_color_accent_secondary">@android:color/system_accent1_200</color>
     <color name="qs_color_accent_custom_primary">@color/system_accent3_400</color>
     <color name="qs_color_accent_custom_secondary">@color/system_accent3_200</color>
 
