--- a/packages/SystemUI/res/drawable/notif_footer_btn_background.xml
+++ b/packages/SystemUI/res/drawable/notif_footer_btn_background.xml
@@ -16,7 +16,7 @@
   -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
-    android:color="?androidprv:attr/colorSurface">
+    android:color="?android:attr/colorControlHighlight">
     <item>
         <inset
             android:insetBottom="4dp"
